# lastattempt

./: Cargo.toml
assets/shaders/: voxel_material.wgsl  voxel_material_prepass.wgsl
assets/vox/: 3x3x3.vox  basic-tile.vox  castle.vox  monu3.vox  teapot.vox
src/: main.rs  plugin.rs  vox.rs  vox_plugin.rs
src/vox_gi/: mod.rs  node.rs  pipeline.rs  plugin.rs  resources.rs  voxel_gi.wgsl
