[package]
name = "lastattempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = { git = "https://github.com/bevyengine/bevy" }
bytemuck = { version = "1.13.1", features = ["derive"] }
dot_vox = "5.1.1"
