[package]
name = "southwall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = "0.10"
bvh = "0.7.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
dot_vox = "5.1.1"
bevy-inspector-egui =  "0.18.3"
bevy_flycam = "0.10.1"
noise = "0.8.2"

[profile.dev.package."*"]
opt-level = 3
